# svelte-check-rs

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.claude/: settings.json
.claude/skills/commit/: SKILL.md
.claude/skills/review-pr-comments/: SKILL.md
.github/workflows/: ci.yml  npm-release.yml
crates/bun-runner/: Cargo.toml
crates/bun-runner/src/: lib.rs  runner.rs
crates/source-map/: Cargo.toml
crates/source-map/src/: builder.rs  lib.rs  line_index.rs  span.rs
crates/svelte-check-rs/: Cargo.toml
crates/svelte-check-rs/src/: cli.rs  config.rs  main.rs  orchestrator.rs  output.rs
crates/svelte-check-rs/tests/: integration_bind_shorthand.rs  integration_cache.rs  integration_compiler.rs  integration_config_ext.rs  integration_extensions.rs  integration_external_imports.rs  integration_issues.rs  integration_parity.rs  integration_snippet_generics.rs  integration_tsconfig.rs
crates/svelte-diagnostics/: Cargo.toml
crates/svelte-diagnostics/src/: diagnostic.rs  lib.rs
crates/svelte-diagnostics/src/a11y/: aria_data.rs  mod.rs
crates/svelte-diagnostics/src/a11y/rules/: mod.rs
crates/svelte-diagnostics/src/component/: mod.rs  state_referenced_locally.rs
crates/svelte-diagnostics/src/css/: mod.rs
crates/svelte-diagnostics/src/state_analysis/: mod.rs  scope.rs  visitor.rs
crates/svelte-diagnostics/tests/: compiler_warning_coverage.rs
crates/svelte-diagnostics/tests/data/: compiler-warning-codes.txt
crates/svelte-parser/: Cargo.toml
crates/svelte-parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs
crates/svelte-parser/tests/: corpus_test.rs  snapshots.rs  upstream_parser_corpus.rs
crates/svelte-parser/tests/snapshots/: snapshots__attach.snap  snapshots__attach_factory.snap  snapshots__attach_multiple.snap  snapshots__attach_self_closing.snap  snapshots__attach_with_attrs.snap  snapshots__attribute_unquoted.snap  snapshots__attribute_unquoted_url.snap  snapshots__attributes.snap  snapshots__await_block.snap  snapshots__bind_key_directive.snap  snapshots__bind_keyword_directives.snap  snapshots__comment.snap  snapshots__comment_in_attr_multiline.snap  snapshots__comment_in_attr_with_value.snap  snapshots__complex_expression.snap  snapshots__complex_snippet_const_regex.snap  snapshots__component.snap  snapshots__component_void_name_empty.snap  snapshots__component_void_name_with_children.snap  snapshots__component_void_names_self_closing.snap  snapshots__concatenated_attribute.snap  snapshots__const_arrow_function_regex.snap  snapshots__const_iife_regex.snap  snapshots__const_with_regex_match.snap  snapshots__const_with_regex_test.snap  snapshots__declaration_tag_const.snap  snapshots__declaration_tag_in_each.snap  snapshots__declaration_tag_let.snap  snapshots__declaration_tag_vs_expression.snap  snapshots__directive_modifiers.snap  snapshots__division_not_regex.snap  snapshots__each_block.snap  snapshots__expression.snap  snapshots__expression_escaped_backslash.snap  snapshots__if_block.snap  snapshots__if_else_if.snap  snapshots__implicitly_closed_li.snap  snapshots__implicitly_closed_li_block.snap  snapshots__javascript_comments_in_tag.snap  snapshots__key_block.snap  (+39 more)
crates/svelte-transformer/: Cargo.toml
crates/svelte-transformer/examples/: emit_ts.rs  emit_tsx.rs
crates/svelte-transformer/src/: component_exports.rs  lib.rs  module.rs  props.rs  runes.rs  snippets.rs  template.rs  transform.rs  types.rs
crates/svelte-transformer/tests/: snapshots.rs  source_map_accuracy.rs  style_directive_multiline.rs
crates/svelte-transformer/tests/snapshots/: snapshots__attach_component.snap  snapshots__attach_element.snap  snapshots__attach_inline.snap  snapshots__attach_source_mapping.snap  snapshots__await_components.snap  snapshots__await_then_wrong_annotation.snap  snapshots__bind_key_transform.snap  snapshots__bind_shorthand_component.snap  snapshots__bind_shorthand_element.snap  snapshots__bind_this_getter_setter_pair.snap  snapshots__bind_value_component_expression.snap  snapshots__bind_with_getter_setter_pair.snap  snapshots__bindable_props_with_comments.snap  snapshots__bindable_renamed_marker.snap  snapshots__bindable_rune.snap  snapshots__binding_checked.snap  snapshots__binding_value.snap  snapshots__class_shorthand_element.snap  snapshots__comment_in_attr_transform.snap  snapshots__complex_events.snap  snapshots__complex_props_trajectory_pattern.snap  snapshots__component_css_custom_props.snap  snapshots__component_namespace.snap  snapshots__component_snippet_generic_header.snap  snapshots__component_snippets_props.snap  snapshots__conditional_components.snap  snapshots__const_arrow_function_transform.snap  snapshots__const_iife_transform.snap  snapshots__counter_complete.snap  snapshots__declaration_tag_async.snap  snapshots__declaration_tag_destructuring.snap  snapshots__declaration_tag_each.snap  snapshots__declaration_tag_simple.snap  snapshots__declaration_tag_source_map.snap  snapshots__derived_by_template_literal_comparison.snap  snapshots__derived_rune.snap  snapshots__dollar_callback_param_not_a_store.snap  snapshots__dollar_member_access_not_a_store.snap  snapshots__each_complex_destructure_transform.snap  snapshots__each_component_key.snap  (+75 more)
crates/tsgo-runner/: Cargo.toml
crates/tsgo-runner/src/: kit.rs  lib.rs  parser.rs  runner.rs
docs/: app.js  diagnostics-coverage.md  index.html  styles.css
npm/base/: package.json
scripts/npm/: build-packages.mjs  publish-packages.mjs
test-fixtures/invalid/: MissingAlt.svelte
test-fixtures/invalid/a11y/: AriaAttributes.svelte  DynamicValues.svelte  FormAndMedia.svelte  InteractiveElements.svelte  MissingAttributes.svelte  NestedContexts.svelte  StructureAndContent.svelte
test-fixtures/valid/: Accessible.svelte  AllDirectives.svelte  Attachments.svelte  AttributeEdgeCases.svelte  AwaitTypeAnnotation.svelte  BlockEdgeCases.svelte  Blocks.svelte  ComplexExpressions.svelte  Counter.svelte  PropsCommentBefore.svelte  Simple.svelte  Snippets.svelte  SpecialTags.svelte  SvelteElements.svelte
(+229 files in other folders)
