[workspace]
resolver = "2"
members = [
    "crates/source-map",
    "crates/svelte-parser",
    "crates/svelte-transformer",
    "crates/svelte-diagnostics",
    "crates/tsgo-runner",
    "crates/svelte-check-rs",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
source-map = { path = "crates/source-map" }
svelte-parser = { path = "crates/svelte-parser" }
svelte-transformer = { path = "crates/svelte-transformer" }
svelte-diagnostics = { path = "crates/svelte-diagnostics" }
tsgo-runner = { path = "crates/tsgo-runner" }

# Parsing
logos = "0.16"
rowan = "0.16"
text-size = "1.1"
swc_ecma_parser = "32.0"
swc_ecma_ast = "19.0"
swc_common = { version = "18.0", features = ["sourcemap"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async
tokio = { version = "1.40", features = ["full"] }

# Error handling
thiserror = "2.0"
miette = { version = "7.2", features = ["fancy"] }

# File system
walkdir = "2.5"
globset = "0.4"
notify = "8.2"

# Testing
insta = { version = "1.40", features = ["json", "redactions"] }
pretty_assertions = "1.4"

# Utilities
indexmap = { version = "2.6", features = ["serde"] }
rustc-hash = "2.0"
smol_str = "0.3"
camino = { version = "1.1", features = ["serde1"] }
rayon = "1.10"
which = "8.0"
shellexpand = "3.1"
tempfile = "3.13"
dirs = "6.0"

[profile.release]
lto = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
