[package]
name = "bun-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Persistent bun runner for Svelte compiler diagnostics"

[dependencies]
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
which.workspace = true
dirs.workspace = true
blake3.workspace = true
