[package]
name = "svelte-diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Svelte-specific diagnostics (a11y, component validation)"

[dependencies]
source-map.workspace = true
svelte-parser.workspace = true
smol_str.workspace = true
thiserror.workspace = true
rustc-hash.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_parser.workspace = true
swc_ecma_visit.workspace = true

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
